@@ -1,3 +1,6 @@
+2006-12-27  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/oci8.c: ignore an exception during GC.
+
 2006-12-22  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oci8.h, ext/oci8/oci8lib.c: add new structure
 	    members to oci8_base_t to handle parent-children tree.
